--- a/GardeningServices/app/build.gradle
+++ b/GardeningServices/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    compile 'com.github.drawers:SpinnerDatePicker:2.0.1'
 }
