--- a/GardeningServices/app/build.gradle
+++ b/GardeningServices/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 }
