--- a/GardeningServices/app/build.gradle
+++ b/GardeningServices/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
 
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
     compile 'com.github.drawers:SpinnerDatePicker:2.0.1'
+
+    implementation 'com.github.GrenderG:Toasty:1.5.0'
 }
