--- a/GardeningServices/app/build.gradle
+++ b/GardeningServices/app/build.gradle
@@ -41,6 +41,9 @@ android {
 dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation platform('com.google.firebase:firebase-bom:28.2.1')
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     def lifecycle_version = "2.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
